<resources>
    <!-- Main strings -->
    <string name="app_name">CustomerConnect</string>
    <string name="content_authority">com.peterarkt.customerconnect</string>
    <string name="content_authority_for_file_provider">com.peterarkt.customerconnect.fileprovider</string>

    <!-- Customer List Fragment -->
    <string name="add_new_customer">Add Customer</string>
    <string name="no_customers_found">No customers found</string>
    <string name="customer_search_hint">Search by name...</string>
    <string name="unknown">Unknown</string>
    <string name="no_customer_selected">No customer selected.</string>

    <string name="an_error_has_ocurred">An error has occurred. Please try again.</string>
    <string name="permission_denied_message">Permission was denied. Permission must be granted to complete the desired task.</string>
    <string name="location_granted_message">Location permission was granted.</string>
    <string name="permission_granted_message">Permission was granted. Please try again.</string>


    <!-- Edit/Create Customer Form -->
    <string name="form_customer_name_placeholder">Name</string>
    <string name="form_customer_phone_number_placeholder">Phone number</string>
    <string name="form_customer_email_placeholder">Email</string>
    <string name="form_customer_address_street_placeholder">Address street and/or office number</string>
    <string name="form_customer_address_street_country_placeholder">Country</string>
    <string name="form_customer_address_street_city_placeholder">City</string>
    <string name="attach_photo">Attach</string>
    <string name="take_photo">Take</string>
    <string name="or">or</string>
    <string name="edit_customer">Edit customer</string>
    <string name="search_for_current_location">Get current location</string>
    <string name="customers_selected_customer">Customer selected image</string>
    <string name="attach_or_take_photo_for_customer">Attach or Take photo</string>
    <string name="zoom_customer_photo">Zoom image</string>
    <string name="new_customer">New customer</string>
    <string name="delete_customer">Delete customer</string>
    <string name="customer_not_found">Customer not found or something happens. Please try again.</string>
    <string name="customer_deleted_successfully">Customer deleted successfully.</string>
    <string name="ask_customer_to_be_deleted">The customer and his visits will be deleted. Do you want to continue?</string>
    <string name="could_not_find_city_and_country">Location found successfully, but city and country couldn´t be loaded. You can try again when internet connection comes available.</string>


    <string name="customer_created_successfully">Created successfully…</string>
    <string name="customer_updated_successfully">Updated successfully…</string>
    <string name="customer_name_is_required">Name is required.</string>
    <string name="customer_address_street_is_required">Address Street is required.</string>
    <string name="email_is_not_valid">Email is not valid.</string>
    <string name="phone_number_is_not_valid">Phone number is not valid. Please specify numbers only.</string>

    <string name="navigate">Navigate</string>
    <string name="send_email">Send email</string>
    <string name="call">Call</string>

    <string name="customers_email">Customer email</string>
    <string name="customers_location">Customer Location</string>
    <string name="customers_phone">Customer Phone</string>

    <string name="error">Error</string>

    <!-- Customer Visits -->
    <string name="no_visits_found">No visits found</string>
    <string name="enter_commentary_hint">Commentary</string>
    <string name="new_visit">New visit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="visit_created_successfully">Created successfully…</string>
    <string name="commentary_required">A commentary is required…</string>

    <!-- Validation strings-->
    <string name="no_image_path_is_found">Image is empty.</string>
    <string name="phone_not_valid_for_phone_call">No phone number specified.</string>
    <string name="email_not_valid_for_send_email">No email specified.</string>
    <string name="no_coordinates_for_navigate">No GPS coordinates are specified.</string>

    <!-- Widget -->
    <string name="widget_title">Today´s Visits</string>

    <string name="info_tab_title">Details</string>
    <string name="visits_tab_title">Visits</string>


    <!-- Address type -->
    <string name="home_type">Home</string>
    <string name="work_type">Work</string>
    <string name="other_type">Other</string>
    <string-array name="phone_types_array">
        <item>@string/home_type</item>
        <item>@string/work_type</item>
        <item>@string/other_type</item>
    </string-array>

</resources>
