<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.peterarkt.customerconnect.ui.customersList.CustomerListFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <!-- Source: https://stackoverflow.com/questions/1555109/stop-edittext-from-gaining-focus-at-activity-startup -->
        <!-- Dummy item to prevent first input from receiving focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_search_hint"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/customer_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone"/>
            <FrameLayout
                android:id="@+id/no_customer_found_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:visibility="gone"
                tools:visibility="visible">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="50dp"

                    android:text="@string/no_customers_found"/>
            </FrameLayout>
        </LinearLayout>

        <!-- Add Customer FAB -->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_new_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_material_add_white"
            android:contentDescription="@string/add_new_customer"

            app:fabSize="normal"
            app:elevation="@dimen/fab_resting_elevation"
            app:pressedTranslationZ="@dimen/fab_pressed_elevation"/>

    </FrameLayout>
</layout>